updates for the previous merge 4.1
