# backend/src/main/java/com/pawsitters/dto/OfferResponse.java
@@ -17,6 +17,7 @@ public record OfferResponse(
         String title,
         String location,
         String description,
+        String imagePath,
         BigDecimal pricePerDay,
         Set<PetChoice> acceptedPetSpecies,
         List<String> services,
@@ -33,6 +34,7 @@ public record OfferResponse(
                 offer.getTitle(),
                 offer.getLocation(),
                 offer.getDescription(),
+                offer.getImagePath(),
                 offer.getPricePerDay(),
                 offer.getAcceptedPetSpecies(),
                 offer.getServices(),
